--- a/dji.html
+++ b/dji.html
@@ -62,6 +62,7 @@
         background-size: 100% auto;
         float: right;
         margin-left: 10px;
+        background-color: rgba(0,0,0,0);
       }
       .btn-1{
         background-image: url('http://7xpwoh.com1.z0.glb.clouddn.com/16-4-10/75918961.jpg');
