--- a/boom/boom.html
+++ b/boom/boom.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>boom shakalaka</title>
+    <meta name="viewport" content="user-scalable=no, width=device-width,initial-scale=1,minimum-scale=1">
+
     <style media="screen">
       .img{
         width: 69px;
@@ -75,7 +77,7 @@
             $('.img').hide();
             $('.dot-wrap').show();
             addProduct();
-          },300)
+          },280)
         });
 
         $('img').load("./ec.png",function(){
@@ -123,11 +125,14 @@
                 opacity: 0
               },
               speed: Math.random()+1,
-              vertex_Rtop: 150
+              vertex_Rtop: 150,
+              onEnd: function(){
+                $(this).hide();
+                // alert('faq');
+              }
             });
           }
         }
-
       })
     </script>
 
