--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>code homepage</title>
+    <link rel="shortcut icon" href="./favicon.ico"/>
+    <link rel="bookmark" href="./favicon.ico"/>
     <link rel="stylesheet" href="./style.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body class="homepage">
@@ -15,7 +17,7 @@
       <div class="search-wrap">
         <div class="serch-content">
           <form action="http://www.baidu.com/baidu" target="_blank">
-            <input type="text" id="search-text" placeholder="search..." name='word' size='30' /><button type="submit" id="search-btn"></button>
+            <input type="text" id="search-text" placeholder="search..." name='word' size='30' autocomplete="off" /><button type="submit" id="search-btn"></button>
           </form>
         </div>
       </div>
@@ -42,6 +44,7 @@
     <script charset="gbk" src="http://www.baidu.com/js/opensug.js"></script>
     <script type="text/javascript">
      	var txtObj = document.getElementById("search-text");
+      txtObj.focus();
     	//回调函数，用于获取用户当前选择的文字
      	function show(str){
     		txtObj.val = str;
